--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>github-project</title>
 </head>
 <body>
-    <h1>My GitHub Project</h1>
+    <h1>My GitHub Project hosse na</h1>
 </body>
 </html>
